--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mongodb": "^3.5.7",
-    "nodemon": "^2.0.4",
+    "cookie-parser":"^1.4.5",
     "npm": "^6.14.4" 
   },
-  "devDependencies": {},
+  "devDependencies": {"nodemon": "^2.0.4"},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
