--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "express-session": "^1.17.1",
     "mongodb": "^3.5.7",
     "cookie-parser":"^1.4.5",
-    "npm": "^6.14.4" 
-  },
+    "npm": "^6.14.4" ,
+    "multer":"^1.4.2"
+    },
   "devDependencies": {"nodemon": "^2.0.4"},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
